syntax = "proto3";

package payment;
option go_package = "/proto/payment;payment";

message PaymentRequest {
  string user_id = 1;
  float amount = 2;
  string method = 3;
}

message PaymentResponse {
  bool approved = 1;
}

service PaymentService {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}
